--- a/README.Rmd
+++ b/README.Rmd
@@ -52,11 +52,15 @@ library(qgisprocess)
 
 ## Functionality
 
+Most functions begin with the `qgis_` prefix, so that functions can be found more easily using tab completion.
+
 The main function is `qgis_run_algorithm(algorithm = , ...)`.
 It specifies the geoprocessing algorithm to be called with a `"provider:algorithm"` formatted identifier, e.g. `"native:convexhull"` or `"gdal:hillshade"`, and it passes the algorithm arguments as R function arguments.
 
 Additional functions are available to discover geoprocessing algorithms, retrieve their documentation, handle processing results, manage QGIS plugins, and more.
+
 A structured overview of functions is available at <https://r-spatial.github.io/qgisprocess/reference/index.html>.
+To get started, read the 'getting started' vignette and use the [cheat sheets](https://r-spatial.github.io/qgisprocess/articles/)!
 
 Note that R package [**qgis**](https://github.com/JanCaha/r_package_qgis) extends on **qgisprocess** by providing a separate R function for each geoprocessing algorithm.
 In addition, it makes the QGIS algorithm documentation available in the corresponding R function documentation.
@@ -65,7 +69,7 @@ In addition, it makes the QGIS algorithm documentation available in the correspo
 
 The following example demonstrates the [buffer](https://docs.qgis.org/latest/en/docs/user_manual/processing_algs/qgis/vectorgeometry.html#buffer) algorithm in action. The passing of [sf](https://r-spatial.github.io/sf), [stars](https://r-spatial.github.io/stars), [terra](https://rspatial.github.io/terra) and [raster](https://cran.r-project.org/package=raster) objects is supported.
 
-```{r buffer}
+```{r buffer, out.width='60%'}
 input <- sf::read_sf(system.file("shape/nc.shp", package = "sf"))
 
 result <- qgis_run_algorithm(
